# viral_usher

./: .flake8  .gitignore  Dockerfile  LICENSE  README.md  driver.py  ncbi_helper.py  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: docker-image.yml  docker-push-latest.yml  docker-push-release.yml  integration-test.yml  python-package.yml  python-publish.yml
app_note/: README.md  docker_ram.tsv  run_params.tsv  run_time.tsv  timing_plot.py  timing_test.sh
app_note/nextstrain/: .gitignore  run_measles.sh  run_rsv.sh
example/: hypothetical_chikungunya.fasta
tests/: check_output_files.sh  conftest.py  test.sh  test_config.py  test_ehdv_4.sh  test_ehdv_4_extra_fasta.sh  test_ehdv_4_extra_fasta_metadata.sh  test_ehdv_4_viral_usher_trees.sh  test_no_genbank.sh  test_prrsv2_nextclade.sh  test_prrsv2_nextclade_extra_fasta.sh
tests/fixtures/: zika_no_workdir.toml
tests/test_data/: ehdv_extra.fa  ehdv_extra.metadata.tsv  prrsv2_extra.fa  ref.fa  ref.gbff  sequences.fa
trees/Adeno_associated_virus_1/treetime_out/: rerooted.newick
trees/African_swine_fever_virus_NHV/treetime_out/: rerooted.newick
viral_usher/: bioconda.py  build.py  cli.py  config.py  init.py  ncbi_helper.py  nextclade_helper.py  run.py  viral_usher_build.py
viral_usher/tests/: uvconfig.rsvA.toml
viral_usher_core/: pyproject.toml
viral_usher_core/viral_usher_build/: viral_usher_build.py
viral_usher_docker/: pyproject.toml  viral_usher_build.py
viral_usher_docker/viral_usher_build/: viral_usher_build.py
