[project]
name = "viral_usher"
version = "0.2.0"
description = "Easily configure and run a pipeline to build a tree of virus genomes using UShER"
authors = [{ name = "Angie Hinrichs", email = "hinrichs@ucsc.edu" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["requests", "biopython", "docker"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/AngieHinrichs/viral_usher"
Issues = "https://github.com/AngieHinrichs/viral_usher/issues"

[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["viral_usher"]

[project.scripts]
viral_usher = "viral_usher.cli:main"
viral_usher_build = "viral_usher.viral_usher_build:main"