[project]
name = "viral_usher_docker"
version = "0.1.0"
description = "Build phylogenetic tree of viral genomes using UShER (script to be run in Docker)"
authors = [{ name = "Angie Hinrichs", email = "hinrichs@ucsc.edu" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["requests", "biopython"]

[tool.setuptools.packages.find]
where = ["."]
include = ["viral_usher_build"]

[project.scripts]
viral_usher_build = "viral_usher_build.viral_usher_build:main"
